# matter-exceptions

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yaml  release.yaml  run-tests.yaml
matter_exceptions/: __about__.py  __init__.py  base_api_exception.py  base_fastapi_exception.py  detailed_exception.py  exceptions.py  utils.py
matter_exceptions/exceptions/: api.py  fastapi.py
tests/: test___init__.py
