[project]
name = "matter-exceptions"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Rômulo Jales", email = "romulo@thisismatter.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/Matter/matter-exceptions#readme"
Issues = "https://github.com/Matter/matter-exceptions/issues"
Source = "https://github.com/Matter/matter-exceptions"


[tool.hatch.version]
path = "matter_exceptions/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "black"
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=matter_exceptions --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
    "matter_exceptions/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
